ansible/files/components/rabbitmq/network/rabbitmq-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shared-rabbitmq-allow-dns
  namespace: shared-services
  labels:
    app.kubernetes.io/name: shared-rabbitmq
    app.kubernetes.io/part-of: shared-rabbitmq
    app.kubernetes.io/managed-by: ansible
    cristex.io/component: rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shared-rabbitmq
      app.kubernetes.io/part-of: shared-rabbitmq
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
