ansible/files/components/rabbitmq/network/rabbitmq-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shared-rabbitmq-default-deny
  namespace: shared-services
  labels:
    app.kubernetes.io/name: shared-rabbitmq
    app.kubernetes.io/part-of: shared-rabbitmq
    app.kubernetes.io/managed-by: ansible
    cristex.io/component: rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: shared-rabbitmq
      app.kubernetes.io/part-of: shared-rabbitmq
  policyTypes: [Ingress, Egress]
